--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                             <option value="Delta">Delta</option>
                             <option value="Ebonyi">Ebonyi</option>
                             <option value="Edo">Edo</option>
+                            <option value="FCT_Abuja">FCT_Abuja</option>
                             <option value="Ekiti">Ekiti</option>
                             <option value="Enugu">Enugu</option>
                             <option value="Gombe">Gombe</option>
