--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             <option value="">All</option>
                             <option value="Abia">Abia</option>
                             <option value="Adamawa">Adamawa</option>
-                            <option value="Akwa_Ibom">Akwa_Ibom</option>
+                            <option value="Akwa Ibom">Akwa Ibom</option>
                             <option value="Anambra">Anambra</option>
                             <option value="Bauchi">Bauchi</option>
                             <option value="Bayelsa">Bayelsa</option>
@@ -262,7 +262,7 @@
                             <option value="Kogi">Kogi</option>
                             <option value="Kwara">Kwara</option>
                             <option value="Lagos">Lagos</option>
-                            <option value="Nassarawa">Nassarawa</option>
+                            <option value="Nasarawa">Nasarawa</option>
                             <option value="Niger">Niger</option>
                             <option value="Ogun">Ogun</option>
                             <option value="Ondo">Ondo</option>
