--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             <option value="">All</option>
                             <option value="Abia">Abia</option>
                             <option value="Adamawa">Adamawa</option>
-                            <option value="Akwa Ibom">Akwa Ibom</option>
+                            <option value="Akwa_Ibom">Akwa Ibom</option>
                             <option value="Anambra">Anambra</option>
                             <option value="Bauchi">Bauchi</option>
                             <option value="Bayelsa">Bayelsa</option>
@@ -273,10 +273,6 @@
                             <option value="Taraba">Taraba</option>
                             <option value="Yobe">Yobe</option>
                             <option value="Zamfara"> Zamfara</option>
-                            
-
-                            
-
                         </select>
                     </div>
 
