Update of code and database
Removing unwanted code and updating the database with more pharmacy data.

--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
                     </div>
                     <br>
 
-                    <!--Company -->
+<!--
+                    Company 
                     <h4 class="info-box-number white hidden"><i class="icon fa fa-building fa-1x"></i>&nbsp;Facility Type</h4>
                     <div class="form-group-sm hidden">
                         <select name="type_scope" id="type_scope" onchange=" triggerUiUpdate();" class="form-control">
@@ -303,6 +304,7 @@
                                 <option value="Other">Other</option>
                           </select>
                     </div>
+-->
 
                     <br>
                     <h4 class="info-box-number white" readonly style="visibility:true"><i class="icon fa fa-h-square fa-1x"></i>&nbsp;Pharmacy Name</h4>
@@ -311,6 +313,7 @@
                     </div>
                     <br>
 
+<!--
                     <h4 class="info-box-number white hidden  "><i class="icon fa fa-cogs fa-1x"></i>Functional Status</h4>
                     <div class="form-group-sm hidden">
                         <select name="status_scope" id="status_scope" onchange=" triggerUiUpdate();" class="form-control">
@@ -320,6 +323,7 @@
                                 <option value="Non-functioning">Non-functioning</option>
                           </select>
                     </div>
+-->
                     <div class="text-center">
                         <span class="info-box-text white">Currently Displaying:</span>
                         <span class="info-box-number white"><b id="country2"></b><big id="projectCount">0</big> Pharmacy(ies)  </span>
