--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                             <option value="Osun">Osun</option>
                             <option value="Oyo">Oyo</option>
                             <option value="Plateau">Plateau</option>
+                            <option value="Rivers">Rivers</option>
                             <option value="Sokoto">Sokoto</option>
                             <option value="Taraba">Taraba</option>
                             <option value="Yobe">Yobe</option>
