Change download link to trigger JSON download

--- a/index.html
+++ b/index.html
@@ -262,10 +262,8 @@
                         <span class="info-box-number white"><b id="country2"></b><big id="projectCount">0</big> Pharmacy(ies)  </span>
 
                         <div class="container">
-                            <br>
-                            <a id="downloadLink" href="#" download="pharmacy_data.csv" target="_blank" class="btn btn-block btn-info btn-flat" style="margin-top: 10px;">
-                                <i class="fa fa-download"></i> Download Filtered Data
-                            </a>
+                            <br>                            
+                            <a id="downloadLink" href="javascript:void(0)" onclick="triggerJSONDownload()" class="btn btn-block btn-info btn-flat" style="margin-top: 10px;"><i class="fa fa-download"></i>Download Data (.json)</a>
                         </div>
                     </div>
 
