--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
                         <div class="container">
                             <br>                            
-                            <a id="downloadLink" href="javascript:void(0)" onclick="triggerJSONDownload()" class="btn btn-block btn-info btn-flat" style="margin-top: 10px;"><i class="fa fa-download"></i>Download Data (.json)</a>
+                            <!-- <a id="downloadLink" href="javascript:void(0)" onclick="triggerJSONDownload()" class="btn btn-block btn-info btn-flat" style="margin-top: 10px;"><i class="fa fa-download"></i>Download Data (.json)</a> -->
                         </div>
                     </div>
 
